# MusicSpectrum

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_8md.html  Doxyfile  INSTALLING.md  INSTALLING_8md.html  LICENSE  README.md  README_8md.html  Spectrum3D_2waves__sine_8cpp.html  Spectrum_2waves__sine_8cpp.html  annotated.html  annotated_dup.js  classFFT-members.html  classFFT.html  classFFT.js  classHUD-members.html  classHUD.html  classHUD.js  classMobiusStrip-members.html  classMobiusStrip.html  classMobiusStrip.js  classPlane-members.html  classPlane.html  classPlane.js  classRender-members.html  classRender.html  classRender.js  classSample-members.html  classSample.html  classSample.js  classShader-members.html  classShader.html  classShader.js  classSpectrum-members.html  classSpectrum.html  classSpectrum.js  classSpectrum3D-members.html  classSpectrum3D.html  (+95 more)
.github/workflows/: ci.yml  cmake.yml  static.yml
assets/shader/: WaveSine.shader
doc/: Doxyfile
docs/: CMakeLists.txt
docs/html/: annotated.html  classFFT-members.html  classFFT.html  classHUD-members.html  classHUD.html  classPlane-members.html  classPlane.html  classRender-members.html  classRender.html  classSample-members.html  classSample.html  classShader-members.html  classShader.html  classSpectrum-members.html  classSpectrum.html  classSpectrum3D-members.html  classSpectrum3D.html  classes.html  dir_184e1001231436f60c388bf98ff76a10.html  dir_1a003bd0f8b30228ceb0ed85527aad95.html  dir_1cc062ef737cff4f20395fdf75740d79.html  dir_30058b5f96a73d0c35ff6f95edf0c893.html  dir_47647ec7295a0bec1dbab5ba5d584f92.html  dir_4c7ee98193a6cba0af9aae7f963a60da.html  dir_4f052099a446d446b939b977e114aa12.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6d432392473365629b0e7eaf2d4fdf9f.html  fft_8hpp_source.html  files.html  graph_legend.html  graph_legend.md5  hud_8hpp_source.html  index.html  menudata.js  plane_8hpp_source.html  render_8hpp_source.html  sample_8hpp_source.html  shader_8hpp_source.html  spectrum3D_8hpp_source.html  spectrum_8hpp_source.html  (+3 more)
docs/html/search/: all_0.html  all_0.js  all_1.html  all_1.js  all_2.html  all_2.js  all_3.html  all_3.js  all_4.html  all_4.js  all_5.html  all_5.js  classes_0.html  classes_0.js  classes_1.html  classes_1.js  classes_2.html  classes_2.js  classes_3.html  classes_3.js  classes_4.html  classes_4.js  nomatches.html  pages_0.html  pages_0.js  searchdata.js
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.html  classes_1.js  classes_2.html  classes_2.js  classes_3.html  classes_3.js  classes_4.html  classes_4.js  classes_5.html  classes_5.js  classes_6.html  classes_6.js  defines_0.html  defines_0.js  files_0.html  files_0.js  files_1.html  files_1.js  (+78 more)
src/: CMakeLists.txt  main.cpp  music_espectro.hpp  util.hpp
src/FFT/: fft.cpp  fft.hpp
src/HUD/: events.cpp  hud.cpp  hud.hpp  ui.cpp
src/Object/: cubo.hpp  cylinder.cpp  cylinder.hpp  grid.cpp  grid.hpp  plane.cpp  plane.hpp
src/Objects/MobiusStrip/: mobius_strip.cpp  mobius_strip.hpp
src/Objects/Plane/: plane.cpp  plane.hpp
src/OpenGL/: index_buffer.cpp  index_buffer.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  util.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_buffer_layout.cpp  vertex_buffer_layout.hpp
src/Plane/: plane.cpp  plane.hpp
src/Render/: events.cpp  plot.cpp  render.cpp  render.hpp
src/Sample/: sample.cpp  sample.hpp
src/Shader/: shader.cpp  shader.hpp
src/Spectrum/: controller.cpp  samples.cpp  spectrum.cpp  spectrum.hpp  waves_rect.cpp  waves_senoide.cpp  waves_sine.cpp
src/Spectrum3D/: mouse.cpp  mouse_event.cpp  opengl.cpp  setup.cpp  spectrum3D.cpp  spectrum3D.hpp  waves_sine.cpp
src/Timer/: timer.cpp  timer.hpp
